--- a/index.html
+++ b/index.html
@@ -148,42 +148,42 @@
                 <div class="col-md-12">
                     <div class="owl-carousel owl-theme">
                         <div class="item">
-                            <a href="services-page.html"> <img src="images/icons/icon-1.svg" alt="">
+                            <a href="#"> <img src="images/icons/icon-1.svg" alt="">
                                 <h5>Photography</h5>
                                 <p>We capture your story with artistic vision and professional precision, turning every moment into timeless visual memories.</p>
                                 <div class="numb">01</div>
                             </a>
                         </div>
                         <div class="item">
-                            <a href="services-page.html"> <img src="images/icons/icon-2.svg" alt="">
+                            <a href="#"> <img src="images/icons/icon-2.svg" alt="">
                                 <h5>Videography</h5>
                                 <p>We capture your story with artistic vision and professional precision, turning every moment into timeless visual memories.</p>
                                 <div class="numb">02</div>
                             </a>
                         </div>
                         <div class="item">
-                            <a href="services-page.html"> <img src="images/icons/icon-3.svg" alt="">
+                            <a href="#"> <img src="images/icons/icon-3.svg" alt="">
                                 <h5>Retouching</h5>
                                 <p>We capture your story with artistic vision and professional precision, turning every moment into timeless visual memories.</p>
                                 <div class="numb">03</div>
                             </a>
                         </div>
                         <div class="item quicklinks">
-                            <a href="services-page.html"> <img src="images/icons/icon-4.svg" alt="">
+                            <a href="#"> <img src="images/icons/icon-4.svg" alt="">
                                 <h5>Drone</h5>
                                 <p>We capture your story with artistic vision and professional precision, turning every moment into timeless visual memories.</p>
                                 <div class="numb">04</div>
                             </a>
                         </div>
                         <div class="item">
-                            <a href="services-page.html"> <img src="images/icons/icon-5.svg" alt="">
+                            <a href="#"> <img src="images/icons/icon-5.svg" alt="">
                                 <h5>Lighting</h5>
                                 <p>We capture your story with artistic vision and professional precision, turning every moment into timeless visual memories.</p>
                                 <div class="numb">05</div>
                             </a>
                         </div>
                         <div class="item">
-                            <a href="services-page.html"> <img src="images/icons/icon-5.svg" alt="">
+                            <a href="#"> <img src="images/icons/icon-5.svg" alt="">
                                 <h5>Grading</h5>
                                 <p>We capture your story with artistic vision and professional precision, turning every moment into timeless visual memories.</p>
                                 <div class="numb">06</div>
