--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gloom - Photography Portfolio Template</title>
-    <meta name="description" content="Gloom is a modern and elegant photography portfolio theme designed for creatives, photographers, and visual artists.">
-    <meta name="keywords" content="photography, portfolio, gallery, fullscreen, creative, responsive, gloom">
-    <meta name="author" content="DuruThemes">
+    <title>Vera - Photography Portfolio Template</title>
+    <meta name="description" content="Vera is a modern and elegant photography portfolio theme designed for creatives, photographers, and visual artists.">
+    <meta name="keywords" content="photography, portfolio, gallery, fullscreen, creative, responsive, Vera">
+    <meta name="author" content="Vera">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,13 +34,13 @@
     <!-- Cursor -->
     <div class="cursor js-cursor"></div>
     <!-- Social Icons -->
-    <div class="social-ico-block"> <a href="https://duruthemes.com/demo/html/gloom/" target="_blank" class="social-ico"><i class="fa-brands fa-instagram"></i></a> <a href="https://duruthemes.com/demo/html/gloom/" target="_blank" class="social-ico"><i class="fa-brands fa-x-twitter"></i></a> <a href="https://duruthemes.com/demo/html/gloom/" target="_blank" class="social-ico"><i class="fa-brands fa-youtube"></i></a> <a href="https://duruthemes.com/demo/html/gloom/" target="_blank" class="social-ico"><i class="fa-brands fa-tiktok"></i></a> <a href="https://duruthemes.com/demo/html/gloom/" target="_blank" class="social-ico"><i class="fa-brands fa-flickr"></i></a> </div>
+    <div class="social-ico-block"> <a href="#" target="_blank" class="social-ico"><i class="fa-brands fa-instagram"></i></a> <a href="#" target="_blank" class="social-ico"><i class="fa-brands fa-x-twitter"></i></a> <a href="#" target="_blank" class="social-ico"><i class="fa-brands fa-youtube"></i></a> <a href="#" target="_blank" class="social-ico"><i class="fa-brands fa-tiktok"></i></a> <a href="#" target="_blank" class="social-ico"><i class="fa-brands fa-flickr"></i></a> </div>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <!-- Logo -->
             <div class="logo-wrapper">
-                <a class="logo" href="index.html"> <img src="images/logo-light.png" class="logo-img" alt="Gloom" loading="lazy"> </a>
+                <a class="logo" href="index.html"> Vera </a>
                 <!-- <div class="logo"><h2>Gl<span>oo</span>m</h2></div> -->
             </div>
             <!-- Button -->
@@ -48,53 +48,13 @@
             <!-- Menu -->
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Home <i class="ti-angle-down"></i></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="index.html" class="dropdown-item"><span>Home Image</span></a></li>
-                            <li><a href="index2.html" class="dropdown-item"><span>Home Slider</span></a></li>
-                            <li><a href="index3.html" class="dropdown-item"><span>Home Video</span></a></li>
-                            <li><a href="index4.html" class="dropdown-item"><span>Home Slideshow</span></a></li>
-                            <li class="dropdown-submenu dropdown">
-                                <a class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"> <span>Onepage <i class="ti-angle-right"></i></span> </a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="onepage-image.html" class="dropdown-item">Onepage Image</a></li>
-                                    <li><a href="onepage-slider.html" class="dropdown-item">Onepage Slider</a></li>
-                                    <li><a href="onepage-video.html" class="dropdown-item">Onepage Video</a></li>
-                                    <li><a href="onepage-slideshow.html" class="dropdown-item">Onepage Slideshow</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Services <i class="ti-angle-down"></i></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="services.html" class="dropdown-item"><span>Services 1</span></a></li>
-                            <li><a href="services2.html" class="dropdown-item"><span>Services 2</span></a></li>
-                            <li><a href="services-page.html" class="dropdown-item"><span>Services Page</span></a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Portfolio <i class="ti-angle-down"></i></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="portfolio.html" class="dropdown-item"><span>Portfolio 1</span></a></li>
-                            <li><a href="portfolio2.html" class="dropdown-item"><span>Portfolio 2</span></a></li>
-                            <li><a href="portfolio3.html" class="dropdown-item"><span>Portfolio 3</span></a></li>
-                            <li><a href="portfolio4.html" class="dropdown-item"><span>Portfolio 4</span></a></li>
-                            <li><a href="portfolio-page.html" class="dropdown-item"><span>Portfolio Page</span></a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Pages <i class="ti-angle-down"></i></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="price.html" class="dropdown-item"><span>Pricing</span></a></li>
-                            <li><a href="team.html" class="dropdown-item"><span>Team</span></a></li>
-                            <li><a href="team-details.html" class="dropdown-item"><span>Team Details</span></a></li>
-                            <li><a href="faq.html" class="dropdown-item"><span>FAQs</span></a></li>
-                            <li><a href="testimonials.html" class="dropdown-item"><span>Testimonials</span></a></li>
-                            <li><a href="post.html" class="dropdown-item"><span>Post Page</span></a></li>
-                            <li><a href="404.html" class="dropdown-item"><span>404 Page</span></a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html" >Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html" >About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html" >Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html" >Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" >Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" >Pricing</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contact.html" >Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -111,26 +71,26 @@
             <div class="row">
                 <div class="col-md-6 mb-45">
                     <div class="item">
-                        <div class="wrap-block"> <span class="icon et-phone"></span>
+                        <div class="wrap-block"> 
                             <div class="text-block">
                                 <h5>Phone</h5>
-                                <p>+1 800 845 00 00</p>
+                                <p>+234 12345 984</p>
                             </div>
                         </div>
                     </div>
                     <div class="item">
-                        <div class="wrap-block"> <span class="icon et-map-pin"></span>
+                        <div class="wrap-block"> 
                             <div class="text-block">
                                 <h5>Address</h5>
-                                <p>750 St, Office 1138, San Francisco, CA 94108</p>
+                                <p>Asolkoro Onisha</p>
                             </div>
                         </div>
                     </div>
                     <div class="item">
-                        <div class="wrap-block"> <span class="icon et-notebook"></span>
+                        <div class="wrap-block"> 
                             <div class="text-block">
                                 <h5>E-Mail</h5>
-                                <p>hello@dbrown.com</p>
+                                <p>ifebuchejulia</p>
                             </div>
                         </div>
                     </div>
@@ -189,7 +149,7 @@
                     <div class="col-md-5 mb-30">
                         <h4 class="wow" data-splitting>Let’s capture the perfect shots together.</h4>
                         <div class="btn-wrap mt-30 text-left wow fadeInUp" data-wow-delay=".6s">
-                            <div class="btn-link"><a href="mailto:hello@gloom.com">hello@gloom.com</a><span class="btn-block color3 animation-bounce"></span></div>
+                            <div class="btn-link"><a href="mailto:ifebuxhejulia@gmail.com">ifebuchejulia@gmail.com</a><span class="btn-block color3 animation-bounce"></span></div>
                         </div>
                     </div>
                     <!-- Testiominals -->
@@ -198,7 +158,7 @@
                             <h5>What Are Clients Saying?</h5>
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
-                                    <p>Working with Gloom was an unforgettable experience. Their attention to detail and creative vision brought our special day to life in the most beautiful way.</p> <span class="quote"><img src="images/quot.png" alt="" loading="lazy"></span>
+                                    <p>Working with Vera was an unforgettable experience. Their attention to detail and creative vision brought our special day to life in the most beautiful way.</p> <span class="quote"><img src="images/quot.png" alt="" loading="lazy"></span>
                                     <div class="info">
                                         <div class="author-img"> <img src="images/team/1.jpg" alt="" loading="lazy"> </div>
                                         <div class="cont">
@@ -207,7 +167,7 @@
                                     </div>
                                 </div>
                                 <div class="item">
-                                    <p>Working with Gloom was an unforgettable experience. Their attention to detail and creative vision brought our special day to life in the most beautiful way.</p> <span class="quote"><img src="images/quot.png" alt="" loading="lazy"></span>
+                                    <p>Working with Vera was an unforgettable experience. Their attention to detail and creative vision brought our special day to life in the most beautiful way.</p> <span class="quote"><img src="images/quot.png" alt="" loading="lazy"></span>
                                     <div class="info">
                                         <div class="author-img"> <img src="images/team/2.jpg" alt="" loading="lazy"> </div>
                                         <div class="cont">
@@ -233,31 +193,31 @@
     <footer class="footer-section">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-3 col-md-12"><a href="index.html"><img src="images/logo-light.png" alt=""></a></div>
+                <div class="col-lg-3 col-md-12"><a href="index.html">Vera</a></div>
                 <div class="col-lg-3 col-md-12">
                     <h5>Get in touch</h5>
-                    <p>hello@gloom.com
-                        <br>+1 234-567-8910
+                    <p>ifebuxhejulia@gmail.com
+                        <br>+234 123 456 87
                     </p>
                 </div>
                 <div class="col-lg-3 col-md-12">
                     <h5>Locations</h5>
-                    <p>San Francisco — California
-                        <br>Palo Alto — Santa Clara
+                    <p>Abuja - Nigeria
+                        <br>No @8 Ozalla Street
                     </p>
                 </div>
                 <div class="col-lg-3 col-md-12">
                     <ul class="footer-social-link">
-                        <li><a href="https://duruthemes.com/demo/html/gloom/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href="https://duruthemes.com/demo/html/gloom/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
-                        <li><a href="https://duruthemes.com/demo/html/gloom/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-                        <li><a href="https://duruthemes.com/demo/html/gloom/" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
                     </ul>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-10 text-center">
-                    <p class="mb-0 copyright">© 2025 Gloom is designed by <a href="https://1.envato.market/DuruThemes" target="_blank">DuruThemes</a>.</p>
+                    <p class="mb-0 copyright">© 2025 Vera is designed by <a href="#" target="_blank">Vera</a>.</p>
                 </div>
             </div>
         </div>
