--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li class="nav-item"><a class="nav-link" href="#" data-scroll-nav="3">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" data-scroll-nav="4">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" data-scroll-nav="5">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#" data-scroll-nav="6">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contact.html" >Contact</a></li>
                 </ul>
             </div>
         </div>
